Backport various fixes